Update MavenArtifact to not use a deprecated URL constructor